<resources>
    <string name="app_name">Oleh Oleh Bali</string>
    <string name="welcome">Welcome</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>
    <string name="choose_category">Choose Category</string>
    <string name="nothing" />
    <string name="souvenir">Souvenir</string>
    <string name="culinary">Culinary</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="faq">FAQ</string>
    <string name="member">Member</string>
    <string name="select_product">Select Product</string>
    <string name="description">Description</string>
    <string name="default_description">This is a default description for the image. This is a default description for the image. This is a default description for the image. This is a default description for the image. This is a default description for the image.</string>
    <string name="price">Price</string>
    <string name="please_wait">Please wait</string>
    <string name="RTO">Request Timed Out</string>
    <string name="SERVER_DOWN_MESSAGE">Server down</string>
    <string name="default_specification">This is a default specification for the product.</string>
    <string name="dash">-</string>
    <string name="specification">Specification</string>
    <string name="default_price">105,000</string>
    <string name="idr">IDR</string>
    <string name="stock">Stock</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="quantity">Quantity :</string>
    <string name="one">1</string>
    <string name="please_set_quantity_not_1">Please set quantity at least 1</string>
    <string name="success_add_item">Successfully added item into cart</string>
    <string name="your_shopping_cart">Your shopping cart</string>
    <string name="check_out">Check out</string>
    <string name="total_payout">Total Payout : IDR</string>
    <string name="buyer_information">Buyer Information</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="sub_district">Sub-district</string>
    <string name="district">District</string>
    <string name="province">Province</string>
    <string name="postal_code">Postal Code</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="should_not_be_empty">This field should not be empty</string>
    <string name="payment_method">Payment Method</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="input_buyer_information">Input Buyer Information</string>
    <string name="please_input_a_valid_email">Please input a valid email</string>
    <string name="preview">Preview</string>
    <string name="products_detail">Products Detail.</string>
    <string name="shipping_detail">Shipping Detail.</string>
    <string name="finish">Finish</string>
</resources>
