<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/wrap_content"
            android:text="@string/idr"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price_tv"
            style="@style/wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/default_price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        style="@style/wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/description"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/description_tv"
        style="@style/wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/dash"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        style="@style/wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/specification"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/specification_tv"
        style="@style/wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/dash"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        style="@style/wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/stock"
        android:textColor="@color/colorAccent"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/stock_tv"
        style="@style/wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/dash"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/quantity_tv"
            style="@style/wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/one"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/quantity_sb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/add_to_cart_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/add_to_cart" />
</LinearLayout>