<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/actionbar_layout" />

    <TextView
        android:id="@+id/your_shopping_cart_tv"
        style="@style/textview_size_medium"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="60dp"
        android:text="@string/your_shopping_cart" />

    <ListView
        android:id="@+id/cart_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/payout_wrapper"
        android:layout_below="@id/your_shopping_cart_tv" />

    <LinearLayout
        android:id="@+id/payout_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/check_out_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/textview_size_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_payout" />

        <TextView
            android:id="@+id/payout_total_tv"
            style="@style/textview_size_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/dash"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/check_out_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/check_out" />

</RelativeLayout>