<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/actionbar_layout" />

    <TextView
        style="@style/textview_size_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/buyer_information"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_light_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/textview_size_x_small"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_light_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/textview_size_x_small"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_light_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/textview_size_x_small"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_light_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/textview_size_x_small"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_light_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/textview_size_x_small"
                    android:text="@string/sub_district" />

                <EditText
                    android:id="@+id/sub_district_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_light_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/textview_size_x_small"
                    android:text="@string/district" />

                <EditText
                    android:id="@+id/district_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_light_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/textview_size_x_small"
                    android:text="@string/province" />

                <EditText
                    android:id="@+id/province_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_light_border"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/textview_size_x_small"
                    android:text="@string/postal_code" />

                <EditText
                    android:id="@+id/postal_code_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/next_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginBottom="50dp"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>