<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="horizontal">

    <com.jixstreet.oleholehbali.extensions.SquareImageView
        android:id="@+id/product_image_iv"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name_tv"
            style="@style/textview_size_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/dash"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textview_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idr"/>

            <TextView
                android:id="@+id/price_tv"
                style="@style/textview_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/dash"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textview_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"/>

            <TextView
                android:id="@+id/quantity_tv"
                style="@style/textview_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/dash"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>